Updated description day 17, and minor refactoring